src/index.css
*,
html,
body {
  margin: 0;
  padding: 0;
  box-sizing: border-box;
}

html, body {
  font-family: Sans-Serif;
  height: 100%;
}

header {
  text-align: center;
  margin: 1em;
  font-size: small;
}

#root {
  padding: 0 30px 0 30px;
}

.chips {
  text-align: center;
}

.chip {
  display: inline-block;
  margin: 5px;
  border: 1px black solid;
  border-radius: 5px;
  min-width: 9em;
  vertical-align: middle;
  min-height: 4em;
  overflow: hidden;
}

.chip-level {
  border-bottom: solid black 1px;
  padding: 3px;
  text-align: center;
}

.chip-level-1 {
  background-color: #bbbdf6;
  color: black;
}

.chip-level-2 {
  background-color: #a8aee2;
  color: white;
}

.chip-level-3 {
  background-color: #9797ce;
  color: white;
}

.chip-level-4 {
  background-color: #8384b9;
  color: white;
}

.chip-level-plundered {
  background-color: #72727e;
  color: white;
}

.chip-player {
  min-height: 1.3em;
  text-align: center;
  display: flex;
  align-items: center;
  flex-wrap: wrap;
  height: 100%;
  justify-content: center;
  min-height: inherit;
}

.player {
  border: solid 1px black;
  display: inline-block;
  margin: 5px;
  border-radius: 4px;
}

.player-current {
  border-width: 3px;
  margin: 3px;
  border-radius: 6px;
}

.player-name {
  border-right: solid 1px black;
  border-radius: 3px 0 0 3px;
  float: left;
  padding: 8px;
  background-color: #72727e;
  color: white;
}

.player-items {
  min-width: 2em;
  float: left;
  text-align: left;
  margin: 4px 4px 0 4px;
  padding-right: 0px;
}

.plunder {
  display: inline-block;
  padding: 0 2px 0 2px;
  margin: 0 2px 0 2px;
  border-radius: 5px;
}

.players {
  float: right;
  min-width: 50%;
  max-width: 50%;
  text-align: right;
}

.players-container {
  width: auto;
  display: block;
  margin-left: 20px;
}

.game-control {
  float: left;
  min-width: 50%;
  max-width: 50%;
}

.game-control h2 {
  border-bottom: 1px solid black;
  margin: 30px 0 10px 0px;
  padding-bottom: 5px;
  text-align: left;
}

.players h2 {
  border-bottom: 1px solid black;
  margin: 30px 0 10px 0px;
  padding-bottom: 5px;
  text-align: right;
}

.content-box {
  border: 1px black solid;
  border-radius: 3px;
  overflow: hidden;
}

.content-box .box-title {
  border-bottom: 1px black solid;
  text-align: center;
  padding: 10px;
  color: white;
  background-color: #72727e;
}

.content-box .box-content {
  padding: 5px 10px 10px 10px;
}

.content-box form label {
  display: block;
  margin-bottom: 4px;
}

.content-box form input[type="text"] {
  display: block;
  width: 100%;
}

.content-box form input[type="submit"] {
  margin-top: 10px;
  display: block;
  width: 100%;
  padding: 3px;
}

.content-box button {
  display: block;
  width: 100%;
  padding: 5px;
}

.content-box button:not(:first-child) {
  margin-top: 5px;
}

.start-game-button {
  margin-top: 15px;
  padding: 5px;
  width: 100%;
}

.stat {
  display: inline-block;
  border: 1px black solid;
  border-radius: 3px;
  overflow: hidden;
  margin: 5px;
  max-height: 2.5em;
}

.stat-highlighted {
    border-width: 2px;
}

.stat:first-child {
  margin-left: 0;
}

.stat > div {
  padding: 10px;
}

.stat-title {
  display: inline-block;
  border-right: 1px black solid;
  background-color: #72727e;
  color: white;
}

.stat-value {
  display: inline-block;
}

.stat-value:empty {
    display: none;
}

.stat-end {
  display: inline-block;
  border-left: 1px black solid;
}

.stat-empty {
    border-left: none;
}

ul {
  margin: 1em 0;
  padding-left: 40px;
}

p {
  margin: 1em 0;
}

header p {
  margin: 0;
}

